--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.10",
     "@types/styled-components": "^5.1.26",
+    "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "graphql": "^16.6.0",
@@ -28,8 +29,10 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-is": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-modern-drawer": "^1.2.0",
     "react-spinners": "^0.13.8",
+    "reactstrap": "^9.1.6",
     "styled-components": "^5.3.6",
     "typescript": "4.9.5"
   },
