--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-modal": "^3.16.1",
     "react-modern-drawer": "^1.2.0",
     "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.1",
     "reactstrap": "^9.1.6",
     "styled-components": "^5.3.6",
     "typescript": "4.9.5"
