--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-cookie": "^4.1.1",
     "react-d3-speedometer@next": "^1.1.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
     "react-is": "^18.2.0",
     "react-modal": "^3.16.1",
