--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nextjs-progressbar": "^0.0.16",
     "nprogress": "^0.2.0",
     "react": "18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-cookie": "^4.1.1",
     "react-d3-speedometer@next": "^1.1.0",
     "react-dom": "18.2.0",
