--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write ."
+  },
+  "prettier": {
+    "singleQuote": true,
+    "trailingComma": "all",
+    "semi": true
   },
   "dependencies": {
     "@apollo/client": "^3.7.9",
@@ -14,18 +20,20 @@
     "@svgr/webpack": "^6.5.1",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
+    "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-dom": "18.0.10",
     "@types/styled-components": "^5.1.26",
     "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "ethers": "^6.2.3",
     "graphql": "^16.6.0",
+    "jwt-decode": "^3.1.2",
     "next": "13.1.6",
-    "nextjs-progressbar": "^0.0.16",
-    "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-cookie": "^4.1.1",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-d3-speedometer@next": "^1.1.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
@@ -33,13 +41,15 @@
     "react-is": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-modern-drawer": "^1.2.0",
+    "react-no-ssr": "^1.1.0",
     "react-spinners": "^0.13.8",
-    "react-toastify": "^9.1.1",
     "reactstrap": "^9.1.6",
     "styled-components": "^5.3.6",
     "typescript": "4.9.5"
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.26"
+    "@types/react-no-ssr": "^1.1.3",
+    "@types/styled-components": "^5.1.26",
+    "prettier": "^2.8.7"
   }
 }
